--- a/views/login.pug
+++ b/views/login.pug
@@ -4,4 +4,18 @@ block content
   h1= title
   p Welcome to #{title}
 
-  div.
+  div(class="container text-center")
+    div(class="card w-50 border-0")
+     h1(class="mt-3") Login
+  
+     div(class="input-group flex-nowrap mt-3")
+        span(class="input-group-text" id="addon-wrapping") @
+        input(type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping")
+      
+     div(class="input-group flex-nowrap mt-5")
+        span(class="input-group-text" id="addon-wrapping") @
+        input(type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="addon-wrapping")
+    
+    div(class="text-start")
+       button(class="btn bg-info text-light mt-5" type="submit") Login
+    
