--- a/views/login.pug
+++ b/views/login.pug
@@ -6,7 +6,7 @@ block content
 
   div(class="container text-center")
     div(class="card w-50 border-0")
-     h1(class="mt-3") Login
+     h1(class="mt-3 display-5") Login
   
      div(class="input-group flex-nowrap mt-3")
         span(class="input-group-text" id="addon-wrapping") @
