--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,4 +5,7 @@ html
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
     link(href='/stylesheets/style.css', rel='stylesheet')
   body
+    header.border-bottom.border-dark.text-center.p-2 
+      p.display-4 My University Schedule
+      p.fs-4 Hi James Mlomo
     block content
