--- a/views/lecturer.pug
+++ b/views/lecturer.pug
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to Lecturers 
-  ul 
+  h1.my-2.text-center Choose a Lecturer
+  div.text-center  
     each val in lecturers
-        li #{val.id}, #{val.name}
+      a(href=`/schedule/${val.id}/5`, style={width:'12rem'}).shadow-sm.d-block.btn.btn-outline-secondary.my-2.mx-auto #{val.name}
