--- a/views/departments.pug
+++ b/views/departments.pug
@@ -1,7 +1,10 @@
 extends layout
 
 block content
-  h1.my-2.text-center Choose a Department
-  div.text-center 
+  div
+    a(href="/faculty")
+      i(class="bi bi-caret-left-fill text-secondary fs-4") faculties
+  h1.my-3.text-center Choose a Department
+  div.container-scroll.text-center 
     each val in departments
       a(href=`/lecturer/${val.id}`, style={width:'12rem'}).shadow-sm.d-block.btn.btn-outline-secondary.my-2.mx-auto #{val.name}
