--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,11 @@
-body {
-  /* padding: 50px; */
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-
 #table-container {
   overflow-x: scroll;
   width: 90%;
   margin: 0 auto;
+}
+.container-scroll {
+  height: 60vh;
+  overflow-y: scroll;
+  border-top: 1px solid rgba(158, 158, 158, 0.5);
+  border-bottom: 1px solid rgba(158, 158, 158, 0.5);
 }
