--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,14 @@
 doctype html
 html
   head
-    title= title
+    script(src="/javascripts/app.js") 
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
+    link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css')
     link(href='/stylesheets/style.css', rel='stylesheet')
   body
-    header.border-bottom.border-dark.text-center.p-2 
-      p.display-4 My University Schedule
+    header.text-center.p-2.bg-secondary.shadow.mb-2
+      p.fs-1.text-light Lecturer's Schedule
       p.fs-4 Hi James Mlomo
-    block content
+    
+    div.container
+      block content
