--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1.my-3.text-center Lecture Schedule 
   div#table-container
-    table.table.table-bordered
+    table.table.table-bordered.table-striped
         thead 
             tr
                 th(scope='col') #
