--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,26 @@
 #table-container {
+  border: 1px solid rgb(189, 189, 189);
   overflow-x: scroll;
-  width: 90%;
+  width: 100%;
+  height: 70vh;
+  overflow-y: scroll;
   margin: 0 auto;
+  box-shadow: inset 0 0 11px #9d9d9d75;
 }
 .container-scroll {
   height: 60vh;
   overflow-y: scroll;
   border-top: 1px solid rgba(158, 158, 158, 0.5);
   border-bottom: 1px solid rgba(158, 158, 158, 0.5);
+}
+
+@media screen and (max-width: 600px) {
+  table {
+    font-size: .6rem;
+    font-weight: bold;
+    padding: 0px;
+  }
+  td {
+    padding: 0px;
+  }
 }
