--- a/views/login.pug
+++ b/views/login.pug
@@ -1,21 +1,21 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-
-  div(class="container text-center")
-    div(class="card w-50 border-0")
-     h1(class="mt-3 display-5") Login
-  
-     div(class="input-group flex-nowrap mt-3")
-        span(class="input-group-text" id="addon-wrapping") @
-        input(type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping")
-      
-     div(class="input-group flex-nowrap mt-5")
-        span(class="input-group-text" id="addon-wrapping") @
-        input(type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="addon-wrapping")
-    
-    div(class="text-start")
-       button(class="btn bg-info text-light mt-5" type="submit") Login
-    
+   .container
+      h2.display-4.text-center login
+      form#login-form.mt-5.mx-auto
+         .mb-3
+            label.form-label(for='exampleInputEmail1') Email address
+            input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp')
+            #emailAlert.form-text.text-danger email alert here.
+         .mb-3
+            label.form-label(for='exampleInputPassword1') Password
+            input#exampleInputPassword1.form-control(type='password')
+            #pwdAlert.form-text.text-danger passowrd alert here.
+         .mb-3.form-check
+            input#exampleCheck1.form-check-input(type='checkbox')
+            label.form-check-label(for='exampleCheck1') remember me
+         .text-center.fs-4.mb-3 login as:
+         .d-flex.justify-content-between
+            button.btn.btn-primary.w-50.me-1 Student  
+            button.btn.btn-secondary.w-50.ms-1 lecturure
