fix script reference

--- a/views/lecturer.pug
+++ b/views/lecturer.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div
-    span('(click)'='previousPage()').btn
+    span(onclick='previousPage()').btn
       i(class="bi bi-caret-left-fill text-secondary fs-4") Departments
   h1.my-3.text-center Choose a Lecturer
   div.container-scroll.text-center  
