--- a/views/register.pug
+++ b/views/register.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-   .container.mb-3
-      h2.display-4.text-center.mt-4.slideFromTop Register
+   .px-4.bg-image.mb-3.text-light
+      h2.display-4.text-center.pt-4.slideFromTop Register
       form#login-form.mt-4.mx-auto.slideFromLeft
         .mb-3
             label.form-label.text-shadow-sm(for='exampleInputName') Name
