--- a/views/register.pug
+++ b/views/register.pug
@@ -5,32 +5,28 @@ block content
       h2.display-4.text-center.pt-4.slideFromTop Register
       form#login-form.mt-4.mx-auto.slideFromLeft
         .mb-3
-            label.form-label.text-shadow-sm(for='exampleInputName') Name
-            input#exampleInputName.form-control.shadow-sm(type='text')
+            label.form-label.text-shadow-sm(for='register-name') Name
+            input#register-name.form-control.shadow-sm(type='text', required='true')
             #nameAlert.form-text.text-danger
         .mb-3
-            label.form-label.text-shadow-sm(for='exampleInputEmail1') Email address
-            input#exampleInputEmail1.form-control.shadow-sm(type='email' aria-describedby='emailHelp')
+            label.form-label.text-shadow-sm(for='register-email') Email address
+            input#register-email.form-control.shadow-sm(type='email' required aria-describedby='emailHelp')
             #emailAlert.form-text.text-danger
         .mb-3
-            label.form-label.text-shadow-sm(for='exampleInputPassword1') Password
-            input#exampleInputPassword1.form-control.shadow-sm(type='password')
+            label.form-label.text-shadow-sm(for='register-password') Password
+            input#register-password.form-control.shadow-sm(type='password' required)
             #pwdAlert.form-text.text-danger
         .mb-3
-            label.form-label.text-shadow-sm(for='exampleInputPassword1') Confirm Password
-            input#exampleInputPassword1.form-control.shadow-sm(type='password')
+            label.form-label.text-shadow-sm(for='register-password-confirm') Confirm Password
+            input#register-password-confirm.form-control.shadow-sm(type='password' required)
             #pwdAlert.form-text.text-danger
         label.form-label.text-shadow-sm Faculty
-        select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example')
-            option(selected='') Select Faculty
-            option(value='1') One
-            option(value='2') Two
-            option(value='3') Three
+        select#faculty-select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example' required onchange='getFacultyDepartments(event)')
+            option(selected disabled value='0') --Select Faculty
+            each faculty in faculties
+                option(value = faculty .id) #{faculty.name}
         label.form-label.text-shadow-sm Department
-        select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example')
-            option(selected='') Select Department
-            option(value='1') One
-            option(value='2') Two
-            option(value='3') Three
+        select#department-select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example' required)
+            option(selected='' hidden disabled) --Select Department
 
-        button.btn.btn-primary.w-50.me-1 register  
+        button.btn.btn-primary.w-50.me-1(onclick="register_onSubmit(event)") register  
