--- a/views/register.pug
+++ b/views/register.pug
@@ -15,11 +15,11 @@ block content
         .mb-3
             label.form-label.text-shadow-sm(for='register-password') Password
             input#register-password.form-control.shadow-sm(type='password' required)
-            #pwdAlert.form-text.text-danger
+            #passwordAlert.form-text.text-danger
         .mb-3
             label.form-label.text-shadow-sm(for='register-password-confirm') Confirm Password
             input#register-password-confirm.form-control.shadow-sm(type='password' required)
-            #pwdAlert.form-text.text-danger
+            #passwordConfirmAlert.form-text.text-danger
         label.form-label.text-shadow-sm Faculty
         select#faculty-select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example' required onchange='getFacultyDepartments(event)')
             option(selected disabled value='0') --Select Faculty
@@ -28,5 +28,5 @@ block content
         label.form-label.text-shadow-sm Department
         select#department-select.form-select.form-select-lg.mb-3(aria-label='.form-select-lg example' required)
             option(selected='' hidden disabled) --Select Department
-
+        #departmentIdAlert.form-text.text-danger
         button.btn.btn-primary.w-50.me-1(onclick="register_onSubmit(event)") register  
