--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -16,7 +16,7 @@ block content
         tbody             
             each val in schedule
                 tr  
-                    th(scope='row') #{val.periodid}
+                    th(scope='row') #{val.period_id}
                     td #{val.time}
                     td #{val.monday}
                     td #{val.tuesday}
