--- a/views/lecturer.pug
+++ b/views/lecturer.pug
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-  div
-    span(onclick='previousPage()').btn
-      i(class="bi bi-caret-left-fill text-secondary fs-4") Departments
+  //- div
+  //-   span(onclick='previousPage()').btn
+  //-     i(class="bi bi-caret-left-fill text-secondary fs-4") Departments
   h1.my-3.text-center Choose a Lecturer
   div.container-scroll.text-center  
     each val in lecturers
