--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
       p.slideFromLeft Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas dicta amet ab facilis eaque esse?
       p.slideFromRight Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quas laudantium vel ut quidem dolorem hic soluta maxime. Et, praesentium.
       .my-4.slideFromBottom
-        a.btn.btn-primary(href="auth/register") register as student
+        a.btn.btn-primary(href="auth/register") register
       .my-4.slideFromBottom
         p.small already registered?
-        a.btn.btn-success(href="auth/login") Login as student
+        a.btn.btn-success(href="auth/login") Login
