--- a/views/login.pug
+++ b/views/login.pug
@@ -26,5 +26,7 @@ block content
 
          div.text-center.mt-5
             button.btn.btn-primary.w-50(onclick="login_post(event)") Login 
+         div.text-center   
+            a.text-light(href="/auth/register") Not registered? Register
             
                   
