--- a/views/schedule_edit.pug
+++ b/views/schedule_edit.pug
@@ -1,36 +1,45 @@
 extends layout
 
 block content
-  #alert-box.m-3.border.border-dark.p-1.rounded.alert-success.fadeIn
-    p#alert-content.m-0.p-1
-    i#alert-close.bi.bi-x-lg(onclick="alertClose()")
-    
-  h1.my-3.text-center My Schedule 
-  div#table-container.mx-2
-    table.table.table-bordered.table-striped
-        thead 
-            tr
-                th(scope='col') #
-                th(scope='col') time 
-                th(scope='col') Monday 
-                th(scope='col') Tuesday 
-                th(scope='col') Wednesday 
-                th(scope='col') Thursday 
-                th(scope='col') Friday 
-        tbody             
-            each val in schedule
-                tr  
-                    th(scope='row') #{val.period_id}
-                    td #{val.time}
-                    td 
-                        textarea(id=val.schedule_id+'-mon') #{val.monday}
-                    td 
-                        textarea(id=val.schedule_id+'-tue') #{val.tuesday}
-                    td 
-                        textarea(id=val.schedule_id+'-wed') #{val.wednesday}
-                    td 
-                        textarea(id=val.schedule_id+'-thu') #{val.thursday}
-                    td 
-                        textarea(id=val.schedule_id+'-fri') #{val.friday}
-                    td.bg-light 
-                        button.btn.btn-sm.btn-success(id=val.schedule_id onclick="updateSchedule(event)") save
+    .px-1
+        #alert-box.m-3.border.border-dark.p-1.rounded.alert-success.fadeIn
+            p#alert-content.m-0.p-1
+            i#alert-close.bi.bi-x-lg(onclick="alertClose()")
+
+        if schedule.length  
+            h1.my-3.text-center My Schedule 
+            div#table-container.mx-2
+                table.table.table-bordered.table-striped
+                    thead 
+                        tr
+                            th(scope='col') #
+                            th(scope='col') time 
+                            th(scope='col') Monday 
+                            th(scope='col') Tuesday 
+                            th(scope='col') Wednesday 
+                            th(scope='col') Thursday 
+                            th(scope='col') Friday 
+                    tbody             
+                        each val in schedule
+                            tr  
+                                th(scope='row') #{val.period_id}
+                                td #{val.time}
+                                td 
+                                    textarea(id=val.schedule_id+'-mon') #{val.monday}
+                                td 
+                                    textarea(id=val.schedule_id+'-tue') #{val.tuesday}
+                                td 
+                                    textarea(id=val.schedule_id+'-wed') #{val.wednesday}
+                                td 
+                                    textarea(id=val.schedule_id+'-thu') #{val.thursday}
+                                td 
+                                    textarea(id=val.schedule_id+'-fri') #{val.friday}
+                                td.bg-light 
+                                    button.btn.btn-sm.btn-success(id=val.schedule_id onclick="updateSchedule(event)") save
+            .d-flex.justify-content-between 
+                a(href=`/schedule/${lecturer_id}`).btn.btn-primary.m-3 preview
+                button.btn.btn-danger.m-3(onclick=`deleteSchedule(${lecturer_id})`) delete Schedule
+        else 
+            h3.text-center.my-5.text-muted No schedule created
+            div.text-center
+                button.btn.btn-outline-success(onclick=`createSchedule(${lecturer_id})`) create schedule
