--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
     #landing.px-4.py-5.text-light.text-center
-      p.slideFromLeft Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas dicta amet ab facilis eaque esse?
-      p.slideFromRight Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quas laudantium vel ut quidem dolorem hic soluta maxime. Et, praesentium.
+      p.slideFromLeft Lecturer's Schedule is a web application that allows students access to all lecturers' timetables
+      p.slideFromRight Lecturers can also create, update and delete their timetable. Changes made to a timetable by the lecturer are immediatley made available to students.
       .my-4.slideFromBottom
         a.btn.btn-primary(href="auth/register") register
       .my-4.slideFromBottom
