--- a/views/schedule_edit.pug
+++ b/views/schedule_edit.pug
@@ -8,7 +8,7 @@ block content
 
         if schedule.length  
             h1.my-3.text-center My Schedule 
-            div#table-container.mx-2
+            div#table-container
                 table.table.table-bordered.table-striped
                     thead 
                         tr
@@ -24,16 +24,16 @@ block content
                             tr  
                                 th(scope='row') #{val.period_id}
                                 td #{val.time}
-                                td 
-                                    textarea(id=val.schedule_id+'-mon') #{val.monday}
-                                td 
-                                    textarea(id=val.schedule_id+'-tue') #{val.tuesday}
-                                td 
-                                    textarea(id=val.schedule_id+'-wed') #{val.wednesday}
-                                td 
-                                    textarea(id=val.schedule_id+'-thu') #{val.thursday}
-                                td 
-                                    textarea(id=val.schedule_id+'-fri') #{val.friday}
+                                td.p-1 
+                                    textarea(id=val.schedule_id+'-mon').small #{val.monday}
+                                td.p-1 
+                                    textarea(id=val.schedule_id+'-tue').small #{val.tuesday}
+                                td.p-1
+                                    textarea(id=val.schedule_id+'-wed').small #{val.wednesday}
+                                td.p-1
+                                    textarea(id=val.schedule_id+'-thu').small #{val.thursday}
+                                td.p-1
+                                    textarea(id=val.schedule_id+'-fri').small #{val.friday}
                                 td.bg-light 
                                     button.btn.btn-sm.btn-success(id=val.schedule_id onclick="updateSchedule(event)") save
             .d-flex.justify-content-between 
