add animation class to alert box

--- a/views/schedule_edit.pug
+++ b/views/schedule_edit.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .px-1
-        #alert-box.m-3.border.border-dark.p-1.rounded.alert-success.fadeIn
+        #alert-box.m-3.border.border-dark.p-1.rounded.alert-success.slideFromTop
             p#alert-content.m-0.p-1
             i#alert-close.bi.bi-x-lg(onclick="alertClose()")
 
