--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
    .px-4.py-3.bg-image.text-light
-      #alert-box.border.border-dark.p-1.rounded.alert-success.fadeIn
+      #alert-box.border.border-dark.p-1.rounded.alert-success.slideFromTop
         p#alert-content.m-0.p-1
         i#alert-close.bi.bi-x-lg(onclick="alertClose()")
 
