--- a/views/schedule_edit.pug
+++ b/views/schedule_edit.pug
@@ -7,7 +7,7 @@ block content
             i#alert-close.bi.bi-x-lg(onclick="alertClose()")
 
         if schedule.length  
-            h1.my-3.text-center My Schedule 
+            h1.display-5.my-3.text-center My Schedule 
             div#table-container
                 table.table.table-bordered.table-striped
                     thead 
