--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  .float-start.text-primary.btn(onclick="previousPage()")
+    i.bi.bi-arrow-left-circle.fs-2.fw-normal
   h1.display-5.my-3.text-center.text-capitalize Lecturer: #{schedule[0].name} 
   .container.mb-4.rounded.alert-primary.p-2
     h6 Alerts from Lecturer:
