--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -4,9 +4,9 @@ block content
   .float-start.text-primary.btn(onclick="previousPage()")
     i.bi.bi-arrow-left-circle.fs-2.fw-normal
   h1.display-5.my-3.text-center.text-capitalize Lecturer: #{schedule[0].name} 
-  .container.mb-4.rounded.alert-primary.p-2
-    h6 Alerts from Lecturer:
-    p.m-0 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ut quidem tenetur voluptatem eligendi quibusdam tempore tempora, omnis facere deserunt!
+  //- .container.mb-4.rounded.alert-primary.p-2
+  //-   h6 Alerts from Lecturer:
+  //-   p.m-0 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ut quidem tenetur voluptatem eligendi quibusdam tempore tempora, omnis facere deserunt!
   if schedule.length
     div#table-container
         table.table.table-bordered.table-striped
