add pages to application. add navbar

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+    include includes/navbar.pug
+   
     #landing.px-4.py-5.text-light.text-center
       p.slideFromLeft Lecturer's Schedule is a web application that allows students access to all lecturers' timetables
       p.slideFromRight Lecturers can also create, update and delete their timetable. Changes made to a timetable by the lecturer are immediatley made available to students.
