--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html
       .small.fadeIn know you lecturer's timetable
        
 
-      button#logout-btn.bg-purple.btn.btn-sm.btn-primary.border-light.shadow.float-end(onclick="logout()")
+      #logout-btn.slideFromRight.bg-purple.btn.btn-sm.btn-primary.border-light.shadow.float-end(onclick="logout()")
         i.bi.bi-box-arrow-right log out
     span#user-email.small.ms-2.text-muted #{userEmail}
     div
