--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+   include includes/navbar.pug
+
    .px-4.py-3.bg-image.text-light
       #alert-box.border.border-dark.p-1.rounded.alert-success.slideFromTop
         p#alert-content.m-0.p-1
