--- a/views/login.pug
+++ b/views/login.pug
@@ -4,9 +4,7 @@ block content
    include includes/navbar.pug
 
    .px-4.py-3.bg-image.text-light
-      #alert-box.border.border-dark.p-1.rounded.alert-success.slideFromTop
-        p#alert-content.m-0.p-1
-        i#alert-close.bi.bi-x-lg(onclick="alertClose()")
+      include includes/alert.pug
 
       h2.display-4.text-center.pt-4.slideFromTop login
       form#login-form.mt-4.mx-auto.slideFromLeft
