--- a/views/all_students.pug
+++ b/views/all_students.pug
@@ -14,10 +14,10 @@ block content
                 th(scope='col') remove
             tbody
                 each val in students
-                    tr  
+                    tr(id=`row-${val.id}`)  
                         th(scope='row') #{val.id}
                         td #{val.name}
                         td #{val.email}
                         td 
-                            button.btn.btn-sm.btn-outline-secondary(id=val.id onclick="")
-                                i.bi.bi-trash-fill.-success
+                            button.btn.btn-sm.btn-outline-secondary(onclick=`removeUser(${val.id}, 'student')`)
+                                i.bi.bi-trash-fill(onclick=`removeUser(${val.id}, 'student')`)
